--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,39 @@
 /* styles.css */
+body {
+	background: #2196F3;
+	font-family: 'Helvetica';
+}
+header {
+	text-align: center;
+}
+
 h1 {
-	width: 100%;
 	font-family: 'Pacifico', cursive;
-	margin: 5px, auto, 20px;
+	text-shadow: 2px 2px black;
+	color: white;
+	width: 100%;
+	font-size: 60px;
+	margin: 5px auto;
 }
 
 .tweets {
-	background-color: pink;
+	margin: 0 auto;
+	width: 40%;
 }
 .tweet {
-	display: block;
+	border: 4px solid #1DE9B6;
+	border-left: 60px solid #1DE9B6;
+	border-radius: 2em;
+    background-color: #BBDEFB;
+	display: inline-block;
 	font-style: bold;
-	margin: 10px auto 10px;
+	margin: 10px auto;
+	padding: 10px 0 10px 10px;
+}
+
+.orange_border {
+	border: 4px solid #FFAB40;
+	border-right: 60px solid #FFAB40;
 }
 
 
@@ -21,6 +43,46 @@ h1 {
 	font-style: bold;
 }
 
-.timestamp {
+.timeago {
 	font-style: italic;
+}
+
+.button {
+	text-align: center;
+	margin: 0 0 40px 0;
+}
+
+/* blockquote styling from: http://stackoverflow.com/questions/16325687/make-big-quotes-with-blockquote */
+blockquote {
+    font-family: 'Pacifico', cursive;
+    font-size: 18px;
+    font-style: italic;
+    width: 500px;
+    margin: 1em 0;
+    padding: 0.35em 40px;
+    line-height: 1.45;
+    position: relative;
+    color: #383838;
+}
+
+blockquote:before {
+    display: block;
+    padding-left: 10px;
+    content: "\201C";
+    font-size: 64px;
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    color: #7a7a7a;
+}
+
+blockquote cite {
+    color: #999999;
+    font-size: 14px;
+    display: block;
+    margin-top: 5px;
+}
+
+blockquote cite:before {
+    content: "\2014 \2009";
 }
