--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
 	color: white;
 	width: 100%;
 	font-size: 60px;
-	margin: 5px auto;
+	margin: 20px auto;
 }
 
 .tweets {
@@ -25,10 +25,11 @@ h1 {
 	border-left: 60px solid #1DE9B6;
 	border-radius: 2em;
     background-color: #BBDEFB;
-	display: inline-block;
+	display: block;
 	font-style: bold;
 	margin: 10px auto;
 	padding: 10px 0 10px 10px;
+	box-shadow: 2px 2px 2px black;
 }
 
 .orange_border {
