--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 	background: #2196F3;
 	font-family: 'Helvetica';
 }
+
 header {
 	text-align: center;
 }
@@ -20,37 +21,70 @@ h1 {
 	margin: 0 auto;
 	width: 40%;
 }
+
 .tweet {
 	border: 4px solid #1DE9B6;
-	border-left: 60px solid #1DE9B6;
+	border-left: 120px solid #1DE9B6;
 	border-radius: 2em;
     background-color: #BBDEFB;
 	display: block;
 	font-style: bold;
-	margin: 10px auto;
+	margin: 15px auto;
 	padding: 10px 0 10px 10px;
 	box-shadow: 2px 2px 2px black;
 }
 
 .orange_border {
 	border: 4px solid #FFAB40;
-	border-right: 60px solid #FFAB40;
+	border-right: 120px solid #FFAB40;
 }
 
-
 .userName {
+	cursor: pointer;
 	font-weight: bold;
 	font-size: 16px;
 	font-style: bold;
+	text-decoration: underline;
 }
 
 .timeago {
 	font-style: italic;
 }
 
-.button {
+.buttonDiv {
 	text-align: center;
 	margin: 0 0 40px 0;
+}
+
+.button{
+	width: 20%;
+	cursor: pointer; /* Cursor changes to hand while hovered */
+	padding: 5px 25px;
+	background: #1DE9B6;
+	border: 1px solid #1DE9B6;
+
+	/* Border-radius */
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+
+	/* Shadow */
+	-webkit-box-shadow: 1px 1px 4px rgba(0,0,0, .75);
+	-moz-box-shadow: 1px 1px 4px rgba(0,0,0, .75);
+	box-shadow: 1px 1px 4px rgba(0,0,0, .75);
+
+	color: #f3f3f3;
+	font-size: 1.1em;
+}
+.button:hover {
+	background-color: #00BFA5;
+}
+
+/* Pushed button effect */
+.button:hover, .button:focus{
+	-webkit-box-shadow: 0 0 1px rgba(0,0,0, .75);
+	-moz-box-shadow: 0 0 1px rgba(0,0,0, .75);
+	box-shadow: 0 0 1px rgba(0,0,0, .75);
 }
 
 /* blockquote styling from: http://stackoverflow.com/questions/16325687/make-big-quotes-with-blockquote */
@@ -58,7 +92,7 @@ blockquote {
     font-family: 'Pacifico', cursive;
     font-size: 18px;
     font-style: italic;
-    width: 500px;
+    width: 90%;
     margin: 1em 0;
     padding: 0.35em 40px;
     line-height: 1.45;
