--- a/styles.css
+++ b/styles.css
@@ -19,24 +19,25 @@ h1 {
 
 .tweets {
 	margin: 0 auto;
-	width: 40%;
+	width: 45%;
 }
 
 .tweet {
-	border: 4px solid #1DE9B6;
+	border: 15px solid #1DE9B6;
 	border-left: 120px solid #1DE9B6;
 	border-radius: 2em;
-    background-color: #BBDEFB;
+    background-color: #E0F2F1;
 	display: block;
 	font-style: bold;
 	margin: 15px auto;
-	padding: 10px 0 10px 10px;
+	padding: 15px 40px;
 	box-shadow: 2px 2px 2px black;
 }
 
 .orange_border {
-	border: 4px solid #FFAB40;
+	border: 15px solid #FFAB40;
 	border-right: 120px solid #FFAB40;
+	background-color: #FFF3E0;
 }
 
 .userName {
