--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,9 @@ header, .timeline {
 	text-align: center;
 }
 
-h1, h2, textarea {
+h1, h2, label {
 	font-family: 'Pacifico', cursive;
-	font-size: 16px;
-}
-
-h1, h2 {
+	font-size: 20px;
 	text-shadow: 2px 2px black;
 	color: white;
 	width: 100%;
@@ -28,9 +25,69 @@ h2 {
 	font-size: 48px;
 }
 
-.tweets, textarea {
+/* New Tweet Form */
+
+.newTweetForm {
+	width: 50%;
+	background: #FFAB40;
+	padding-bottom: 10px;
+	border-radius: 2em;
+	box-shadow: 2px 2px 2px black;
+	padding: 30px;
+
+}
+
+.formInput:focus, .formInput:hover {
+	background: #e5fff3;
+}
+
+
+
+.newTweetForm, .newTweetButton, .tweets {
 	display: block;
 	margin: 0 auto;
+}
+
+
+
+/* TESTING */
+
+form {
+
+}
+
+input[type=text], select {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #1DE9B6;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+label {
+	padding-right: 5px;
+}
+
+/* Tweets */
+
+.tweets {
 	width: 50%;
 }
 
@@ -99,7 +156,7 @@ h2 {
 	box-shadow: 0 0 1px rgba(0,0,0, .75);
 }
 
-/* blockquote styling from: http://stackoverflow.com/questions/16325687/make-big-quotes-with-blockquote */
+/* Blockquote styling from: http://stackoverflow.com/questions/16325687/make-big-quotes-with-blockquote */
 blockquote {
     font-family: 'Pacifico', cursive;
     font-size: 18px;
