--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,16 @@ header, .timeline {
 	text-align: center;
 }
 
-h1, h2, label {
+h1, h2, label, input[type=text] {
 	font-family: 'Pacifico', cursive;
 	font-size: 20px;
-	text-shadow: 2px 2px black;
+
 	color: white;
 	width: 100%;
 	margin: 20px auto;
+}
+h1, h2, label {
+	text-shadow: 2px 2px black;
 }
 
 h1 {
@@ -34,56 +37,42 @@ h2 {
 	border-radius: 2em;
 	box-shadow: 2px 2px 2px black;
 	padding: 30px;
+	box-sizing: border-box;
+	text-align: right;
 
 }
-
-.formInput:focus, .formInput:hover {
-	background: #e5fff3;
-}
-
-
 
 .newTweetForm, .newTweetButton, .tweets {
 	display: block;
 	margin: 0 auto;
 }
 
-
-
-/* TESTING */
-
-form {
-
+label {
+	padding-right: 10px;
 }
 
-input[type=text], select {
+/* Text fields */
+input[type=text] {
     width: 80%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 2em;
     box-sizing: border-box;
+	color: black;
 }
 
+/* Proclamation button */
 input[type=submit] {
-    width: 100%;
-    background-color: #1DE9B6;
-    color: white;
     padding: 14px 20px;
     margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 input[type=submit]:hover {
     background-color: #45a049;
 }
 
-label {
-	padding-right: 5px;
-}
 
 /* Tweets */
 
@@ -125,7 +114,7 @@ label {
 	margin: 0 0 40px 0;
 }
 
-.showAllButton{
+.button, #newTweetButton {
 	width: 20%;
 	cursor: pointer; /* Cursor changes to hand while hovered */
 	padding: 5px 25px;
@@ -145,12 +134,12 @@ label {
 	color: #f3f3f3;
 	font-size: 1.1em;
 }
-.showAllButton:hover {
+.button:hover {
 	background-color: #00BFA5;
 }
 
 /* Pushed button effect */
-.showAllButton:active {
+.button:active {
 	-webkit-box-shadow: 0 0 1px rgba(0,0,0, .75);
 	-moz-box-shadow: 0 0 1px rgba(0,0,0, .75);
 	box-shadow: 0 0 1px rgba(0,0,0, .75);
